css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  padding: 0;
  text-rendering: optimizeLegibility;
}

html, body { height: 100%; }

body {
  background-color: #FFF;
  font: 13.34px Helvetica, Arial, sans-serif;
  font-size: small;
  text-align: center;
  margin: 0;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #222; }
a:hover   { color: #222; }
a:visited { color: #333; }

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/
ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts li {
  line-height: 1.75em;
}

ul.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}

.items {
  list-style-position: inside;
  margin-bottom: 2em;
}

.items li {
  line-height: 1.75em;
}

ul.items li {
  list-style-type: disc;
}

ol ul li {
  margin-left: 1em;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.twitter-follow-button {
  position: absolute;
  left: -80px;
}

a.twitter-follow-button {
  display: none;
}

.site {
  position: relative;
  font-size: 115%;
  text-align: justify;
  width: 42em;
  margin: 2em auto;
  line-height: 1.5em;
}

.site .header {
  font-size: 2em;
  font-weight: normal;
  margin-bottom: 1em;
}

.site .header a {
  text-decoration: none;
}

.site .header h1.title {
  display: inline-block;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: bold;
}

.site .header h1.title a {
  color: #5a5a5b;
}

.site .header h1.title img {
  width: 8em;
}

.site .header a.extra {
  display: inline-block;
  color: #5a5a5b;
  margin-left: 1em;
}

.site .header .title,
.site .header .extra {
  vertical-align: middle;
}

.site .header a.extra:hover {
  text-decoration: underline;
}

.site .meta {
  color: #aaa;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  overflow: hidden;
}

.site .footer .contact {
  float: left;
  margin-right: 3em;
}

.site .footer .contact a {
  color: #8085C1;
}

.site .footer .rss {
  margin-top: 1.1em;
  margin-right: -.2em;
  float: right;
}

.site .footer .rss img {
  border: 0;
}

#home .site .header {
  font-size: 2em;
}

/*
#home .site .extra {
  display: none;
}
*/

/*
  Masthead
*/
.masthead {
  background-color: #fff;
  border-bottom: 1px solid #0eb9e7;
}

.masthead .site {
  margin-top: 0;
  padding-top: 2em;
}

.masthead .hero {
  display: none;
}

.masthead .hero {
  padding: 0 0 0.5em 0;
  color: #5a5a5b;
  font-size: 4em;
  line-height: 1;
  text-align: left;
  padding-bottom: 0;
}

#home .masthead .hero {
  display: block;
}

/*
  info update form
*/
.info-update-form {
  margin-bottom: 1em;
  padding-bottom: 1em;
  border-bottom: 1px solid #CCC;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

.post img {
  width: 100%;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

